Add workout replace endpoint
